# mipt-llvm

./: .gitignore  CMakeLists.txt  README.md
GameLife/: CMakeLists.txt  cell_field.c  cell_field.h  cell_field.ll  game_life.c  game_life.ll  graphic_lib.c  graphic_lib.h
IRGen/: app_ir_gen.cpp  build.sh  merged.ll
InstrumentationPass/: CMakeLists.txt  app_route_pass.cpp  app_trace_pass.cpp  instruction_stat.txt  route_method.cpp  trace_method.cpp  visualize_stat.py
